# TheVault

./: .gitignore  Cargo.toml  README.md  dummygenerator.pl
db/: db-drop.sql  db-initialize.sql  docker-compose.yml
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2021-09-10-073136_indices/: down.sql
migrations/2021-09-24-051308_samplesheet/: up.sql
migrations/2021-10-08-092232_dna_nr_optional/: down.sql  up.sql
src/: config.rs  main.rs  models.rs  run.rs  samplesheet.rs  schema.rs  vaultdb.rs  web.rs
systemd/: vault-update.service  vault-web.service
templates/: _header.html.hbs  checkout.html.hbs  run.html.hbs  runs.html.hbs
vquery/: Cargo.toml  Rocket.toml  dummygenerator.pl
vquery/migrations/00000000000000_diesel_initial_setup/src/: schema.rs
vquery/migrations/2021-09-10-073136_indices/: up.sql
vquery/migrations/2021-09-10-081853_fastq_filename_idx/: down.sql  up.sql
vquery/migrations/2021-09-24-051308_samplesheet/: down.sql
vquery/src/: config.rs  database.rs  main.rs  models.rs  run.rs  runwalker.rs  sample.rs  samplesheet.rs  schema.rs  vaultdb.rs  web.rs
vquery/systemd/: vault-update.service  vault-update.timer  vault-web.service
vquery/templates/: _footer.html.hbs  _header.html.hbs  query.html.hbs
