[package]
name = "vquery"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "0.5", default-features = false, features = ["deflate"] }
structopt = "0.3"
postgres = { version = "0.19", features = ["with-time-0_2"]}
time = "0.2"
walkdir = "2"
clap = "2.33"
rayon = "1.5"
log = "0.4.0"
env_logger = "0.8.4"
regex = "1.5"
lazy_static = "1.4"

